# YouShouldDO

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
.claude/: settings.local.json
__tests__/: utils.test.js
lib/: utils.js
scripts/: capture-media.js  make-gifs.js  make-gifs.py
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: utils.js
